# bio-inter-graph

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
biointergraph/: __init__.py  shared.py
biointergraph/annotations/: __init__.py  chromatin.py  extended.py  gencode.py  gff2bed.py  intersect.py  main.py  refseq.py  ucsc.py
biointergraph/ids/: __init__.py  utils.py
biointergraph/ids_info/: __init__.py  ensembl.py  entrez.py  extended.py  localization.py  main.py  mobidb.py  refseq.py  uniprot.py
biointergraph/ids_mapping/: BioMart.py  OrgHsEgDb.py  __init__.py  entrez.py  intersect.py  karr_seq.py  main.py  protein.py  validation.py
biointergraph/interactions/: ENCODE.py  __init__.py  analysis.py  chip_seq.py  encode.py  graph.py  gtrd.py  hic.py  karr_seq.py  karr_seq_shared.py  load.py  main.py  prim_seq.py  protein.py  ric_seq.py  rna_chrom.py  rna_protein.py  sprite.py
tests/: test_shared_remote_file2local.py
